# fundroid

./: .envrc  .gitignore  AGENTS.md  GITHUB_SETUP.md  README.md  SETUP.md  flake.nix  justfile  result  test-console-snapshot.sh
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml
.helix/: recent-files.txt
android/capsule/: .gitignore  manifest.toml
android/capsule/rootfs/: .gitignore
android/capsule/rootfs/init/: init.capsule.rc
android/capsule/rootfs/scripts/: capsule_entry.sh  capsule_supervisor.sh
compositor-rs/: Cargo.toml  README.md
compositor-rs/src/: main.rs
cuttlefish/: README.md  flake.nix
cuttlefish/cfctl/: Cargo.toml  README.md
cuttlefish/cfctl/.helix/: recent-files.txt
cuttlefish/cfctl/src/: adb.rs  launcher.rs  lib.rs  protocol.rs
cuttlefish/cfctl/src/daemon/: config.rs  guest.rs  manager.rs  mod.rs  util.rs
cuttlefish/cfctl/src/lite/: mod.rs
cuttlefish/configs/: config_phone_no_radios.json
cuttlefish/docs/: AOSP_BUILD.md  CUTTLEFISH_README.md
cuttlefish/examples/: tracks.nix
cuttlefish/modules/: cuttlefish-module.nix
docs/: cuttlefish.md  docs-refresh-summary.md  drm_rect.md  ideas.md  init-wrapper-notes.md  qemu-plan.md  qemu-to-cuttlefish.md  rust-wayland-plan.md  wayland.md  weston-plan.md  work-log.md
docs/plans/: cf-pid1-logging.md  cf-ramdisk-packaging.md  pixel4a-bringup.md
heartbeat-init/: Makefile  heartbeat_init  heartbeat_init.c  heartbeat_init_minimal  heartbeat_init_minimal.c  heartbeat_init_v3.c  test_console_setup.c  test_mounts.c  test_print_only.c
heartbeat-init/.build/: avb_info_stock.txt  mkbootimg_args.txt  new_cmdline.txt  ramdisk  ramdisk_modified
init/: init.webosd.rc  init_wrapper.c
notes/: CONSOLE-OUTPUT-SUMMARY.md  FINAL-STATUS.md  HELP-NEEDED-console-output.md  REQUEST-FOR-GUIDANCE.md  STATUS.md  STUCK-ON-STEP2.md  cfctl-lite-run.md  cuttlefish-infrastructure-issues.md  debugging-invisible-init.md  experiment-2-guest-exit-analysis.md  experiment-3-findings.md  experiment-5-host-tool-instrumentation.md  heartbeat-init-findings.md  phase1-debug.md  qemu-datadir-permission-issue.md  step2-deep-dive.md  step2-step3-test-results.md
notes/cf-pid1-logging/step1-instance18/: cfctl-logs-stdout.txt  console_log
notes/cf-pid1-logging/step1-instance19/: cfctl-logs-stdout.txt  console_log  logcat
notes/cf-pid1-logging/step1-instance43/: cfctl-logs.txt  console_log.txt  logcat.txt
notes/cf-pid1-logging/step1-instance90/: cfctl-logs.txt  console_log.txt  logcat.txt
plans/: backlog.md  boot.md  capsule.md  experiments.md  hal.md  os.md  plan.md  prompt.md  prompt_tap_fix.md  simple-plan.md  standalone-init.md
qemu-init/: .gitignore  README-kernel.md  README-phase7-kernel-build.md  README.md  build-drm-rect.sh  build-initramfs.sh  build-kernel-linux.sh  build.sh  compositor-rs  download-kernel.sh  drm_rect  drm_rect.zig  extract-nixos-modules.sh  fb_rect.zig  init.zig  ld-linux-x86-64.so.2  ld-musl-x86_64.so.1  libc.so.6  libdrm.so.2  libpthread.so.0  load_modules  load_modules.zig  qemu-kernel  run.sh  test-client  test-input  test-input-e2e-macos.sh  test-phase7-input.sh  test-phase7.sh  test-shutdown.sh  test_child  test_child.zig  test_input.zig  weston-rootfs
qemu-init/kernel-modules/: virtio-gpu.ko  virtio.ko  virtio_dma_buf.ko  virtio_pci.ko  virtio_pci_legacy_dev.ko  virtio_pci_modern_dev.ko  virtio_ring.ko
qemu-init/nix/: kernel.nix  weston-rootfs.nix
qemu-init/rootfs/: compositor-rs  test-client
qemu-init/rootfs/etc/: profile  weston.ini
rust/capsule_tools/: Cargo.toml
rust/capsule_tools/src/: binder.rs  error.rs  lib.rs
rust/capsule_tools/tests/: integration.rs
rust/drm_rect/: Cargo.toml
rust/drm_rect/src/: lib.rs  main.rs
rust/fb_rect/: Cargo.toml
rust/fb_rect/src/: main.rs
rust/hal_ndk/: Cargo.toml  build.rs
rust/hal_ndk/src/: lib.rs
rust/hal_shims/common/: CMakeLists.txt  binder_ndk_shim.c  binder_ndk_shim.h
rust/hal_shims/vibrator/: CMakeLists.txt  vibrator_shim.cpp  vibrator_shim.h
rust/hal_shims/vibrator/aidl/aidl/android/hardware/vibrator/: BnVibrator.h  BpVibrator.h  IVibrator.h
rust/hal_shims/vibrator/aidl/android/hardware/vibrator/: IVibrator.cpp
rust/hal_vibrator/: Cargo.toml  build.rs
rust/hal_vibrator/src/: lib.rs
rust/minios_init/: Cargo.toml
rust/minios_init/src/: main.rs
rust/sf_shim/: CMakeLists.txt
rust/sf_shim/include/: sf_shim.h
rust/sf_shim/src/: sf_shim.cpp
rust/webosd/: Cargo.toml
rust/webosd/src/: main.rs
scripts/: _capsule_sync.py  agent-env.sh  aidl_gen_vibrator.sh  build_phase1.sh  capsule_exec.sh  capsule_hal_smoke.sh  capsule_hello.sh  capsule_logcat.sh  capsule_smoke.sh  capture-stock-console.sh  cfctl-agent.sh  check_kernel_features.sh  ci.sh  cpio_edit.py  cuttlefish_instance.sh  download_emulator_system.sh  extract_ramdisk.py  hal_smoke.sh  list_branch_emulators.sh  push_capsule_tools.sh  run_capsule.sh  test-heartbeat.sh  test_milestone_a.sh  test_milestone_a_remote.sh
scripts/lib/: cfctl-agent-common.sh
scripts/linux/: aosp-bootstrap.sh  aosp-build-webosd.sh  aosp-build-with-overlay.sh  aosp-rebuild-image.sh  cf-adb-tunnel.sh  cf-launch.sh
scripts/mac/: dev-adb.sh  remote-build.sh  remote-sync.sh
