[package]
name = "compositor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 2: DRM device initialization
drm = "0.12"

# Phase 4: Wayland server
wayland-server = "0.31"
wayland-backend = "0.3"

# Phase 6+: Buffer rendering
memmap2 = "0.9"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
