[package]
name = "cfctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfctl"
path = "src/lib.rs"

[[bin]]
name = "cfctl"
path = "src/bin/cfctl.rs"

[[bin]]
name = "cfctl-daemon"
path = "src/bin/cfctl-daemon.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dashmap = "5.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
