[package]
name = "capsule_tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "capsule_tools"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.21"
rsbinder = { version = "0.4.3", default-features = false, features = ["sync", "async", "android_14"] }
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.10.1"
